# TUI-doku

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  savegame.json
.github/workflows/: cd.yml
src/: app.rs  board.rs  input.rs  main.rs  save.rs  timer.rs  tui.rs  ui.rs
src/Input/: game.rs  mainmenu.rs  mod.rs
src/input/: game.rs  mainmenu.rs  mod.rs  stats.rs
src/ui/: game.rs  mainmenu.rs  mod.rs  stats.rs  theme.rs
